examples/valid/10_nominal_types.lane
struct UserId {
  value : Int
}

struct OrderId {
  value : Int
}

fn user_value(id : UserId) -> Int {
  id.value
}

let user_id : UserId = UserId::{ value: 1 }
let order_id : OrderId = OrderId::{ value: 1 }

