examples/invalid/11_named_function_missing_result_type.lane
// invalid: named functions must state their result type
fn id(value : Int) {
  value
}

